--- a/hexlet-hello-world/package.json
+++ b/hexlet-hello-world/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "hexlet-hello-world",
+  "name": "firstProject",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
+  "description": "my first project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Kanstantsin Lushchyk",
   "license": "ISC"
 }
