--- a/hexlet-hello-world/package.json
+++ b/hexlet-hello-world/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2"
   }
 }
